--- a/articles/data-explorer/toc.yml
+++ b/articles/data-explorer/toc.yml
@@ -62,8 +62,14 @@ items:
     href: /azure/kusto/management/
   - name: API:er
     href: /azure/kusto/api/
+  - name: Verktyg
+    href: /azure/kusto/tools/
+  - name: Begrepp
+    href: /azure/kusto/concepts/
 - name: Resurser
   items:
+  - name: Blogg
+    href: https://azure.microsoft.com/blog/tag/azure-data-explorer/
   - name: Forum
     items:
     - name: Stack Overflow
@@ -73,18 +79,16 @@ items:
     - name: MSDN-forum
       href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureKusto
   - name: Produktfeedback
-    href: https://feedback.azure.com/forums/335175-kusto
+    href: http://aka.ms/adefeedback
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/data-explorer/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/updates/
+  - name: Kostnadsuppskattning
+    href: http://aka.ms/adecostestimator
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=data-explorer
-ms.openlocfilehash: 0252701d48b289f7041e34b6ac17fe230028912a
-ms.sourcegitcommit: 1aacea6bf8e31128c6d489fa6e614856cf89af19
+ms.openlocfilehash: 49d8f70c130cf9b1fe90b82f49c8f728845a335f
+ms.sourcegitcommit: b4a46897fa52b1e04dd31e30677023a29d9ee0d9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/16/2018
-ms.locfileid: "49340978"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "49393311"
