--- a/articles/event-hubs/index.yml
+++ b/articles/event-hubs/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: a0ee180475c0264d8fce5856b6354830a42ff963
-ms.sourcegitcommit: 8e06d67ea248340a83341f920881092fd2a4163c
+ms.openlocfilehash: ceb148953952228e3c1c277454f93fe44f478b44
+ms.sourcegitcommit: f20e43e436bfeafd333da75754cd32d405903b07
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/16/2018
-ms.locfileid: "49352528"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "49386679"
 documentType: LandingData
 title: Dokumentation om Azure Event Hubs
 metadata:
@@ -118,7 +118,12 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: <a href="https://docs.microsoft.com/en-us/azure/event-hubs/event-hubs-tutorial-visualize-anomalies">Läsa en Event Hubs-dataström med Azure Stream Analytics och visualisera avvikelserna</a>
+    - html: <a href="https://docs.microsoft.com/azure/event-hubs/event-hubs-tutorial-visualize-anomalies">Läsa en Event Hubs-dataström med Azure Stream Analytics och visualisera avvikelserna</a>
+    - html: <a href="https://docs.microsoft.com/azure/event-hubs/store-captured-data-data-warehouse">Bearbeta och migrera insamlade Event Hubs-data till ett SQL Data Warehouse med Event Grid och Azure Functions</a>
+    - html: <a href="https://docs.microsoft.com/azure/azure-databricks/databricks-stream-from-eventhubs">Strömma data i Azure Databricks med Event Hubs</a>
+    - html: <a href="https://docs.microsoft.com/azure/event-hubs/event-hubs-kafka-mirror-maker-tutorial">Spegla en asynkron Kafka-meddelandekö i en Kafka-aktiverad händelsehubb</a>
+    - html: <a href="https://docs.microsoft.com/azure/event-hubs/event-hubs-kafka-flink-tutorial">Ansluta Apache Flink till Apache Kafka-aktiverade händelsehubbar</a>
+    - html: <a href="https://docs.microsoft.com/azure/event-hubs/event-hubs-kafka-akka-streams-tutorial">Ansluta Akka Streams till Apache Kafka-aktiverade händelsehubbar</a>
 - title: Utveckla dina färdigheter med Microsoft Learn
   items:
   - type: list
@@ -138,21 +143,44 @@ sections:
     style: cards
     className: cardsFTitle
     items:
-    - title: Utveckla med .NET för Azure
-      href: https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=FEED65A23CB221A7
+    - title: Azure Event Hubs för .NET-utvecklare – grunderna
+      href: https://www.pluralsight.com/courses/azure-event-hubs-dotnet-developers-fundamentals
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=FEED65A23CB221A7
+        href: https://www.pluralsight.com/courses/azure-event-hubs-dotnet-developers-fundamentals
 - title: Exempel
   items:
-  - type: paragraph
-    text: Hitta skript för att hantera vanliga uppgifter.
   - type: list
-    style: unordered
-    className: spaced noBullet
+    style: icon48
     items:
-    - html: <a href="https://github.com/Azure/azure-event-hubs/tree/master/samples/Management">Azure PowerShell</a>
-    - html: <a href="https://github.com/Azure/azure-event-hubs/tree/master/samples/Management">Azure CLI</a>
+    - image:
+        src: /azure/event-hubs/media/index/logo_net.svg
+      text: .NET Framework
+      href: https://github.com/Azure/azure-event-hubs/tree/master/samples/DotNet
+    - image:
+        src: /azure/event-hubs/media/index/logo_java.svg
+      text: Java
+      href: https://github.com/Azure/azure-event-hubs/tree/master/samples/Java
+    - image:
+        src: /azure/event-hubs/media/index/logo_python.svg
+      text: Python
+      href: https://github.com/Azure/azure-event-hubs-python/tree/master/examples
+    - image:
+        src: /azure/event-hubs/media/index/logo_nodejs.svg
+      text: Node.js
+      href: https://github.com/Azure/azure-event-hubs-node
+    - image:
+        src: /azure/event-hubs/media/index/logo_go.svg
+      text: Go
+      href: https://github.com/Azure/azure-event-hubs-go/tree/master/_examples
+    - image:
+        src: /azure/event-hubs/media/index/cli.svg
+      text: Azure CLI
+      href: https://github.com/Azure/azure-event-hubs/tree/master/samples/Management/CLI
+    - image:
+        src: /azure/event-hubs/media/index/logo_powershell.svg
+      text: Azure PowerShell
+      href: https://github.com/Azure/azure-event-hubs/tree/master/samples/Management/PowerShell
 - title: Referens
   items:
   - type: list
