--- a/articles/media-services/index.yml
+++ b/articles/media-services/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: fd3b48648ca0b8f7ce1d134bc7a40a7b1f5ed348
-ms.sourcegitcommit: e8f443ac09eaa6ef1d56a60cd6ac7d351d9271b9
+ms.openlocfilehash: 0f249cfc604a31a29f6b2e3c0380e6591ec8b4e6
+ms.sourcegitcommit: 3a7c1688d1f64ff7f1e68ec4bb799ba8a29a04a8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/12/2018
-ms.locfileid: "35759220"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "49378844"
 documentType: LandingData
 title: Dokumentation för Azure Media Services
 metadata:
@@ -13,73 +13,82 @@ metadata:
   meta.description: Azure Media Services is a cloud-based platform that enables you to build solutions that achieve broadcast-quality video streaming, enhance accessibility and distribution, analyze content, and much more.
   services: media-services
   author: juliako
-  manager: cfowler
+  manager: femila
   ms.service: media-services
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 04-21-2018
+  ms.date: 09-24-2018
   ms.author: juliako
 abstract:
-  description: Azure Media Services är en molnbaserad plattform för att skapa lösningar för videor i sändningskvalitet för direktuppspelning, förbättra tillgängligheten och distributionen, analysera innehållet och mycket mer.
+  description: Azure Media Services (AMS) är en molnbaserad plattform för att skapa lösningar för högupplöst videokodning och sändningskvalitet för direktuppspelning som når din publik på de flesta populära enheter. Med AMS v3 kan du även extrahera insikter från dina video- och ljudfiler med Video Indexer med hjälp av analysförinställningar för AMS v3. Använd Video Indexer direkt om du vill få mer detaljerade insikter.<br/> Mer information om när du bör använda analysförinställningar för Video Indexer eller Media Services finns i <a href="/azure/media-services/video-indexer/compare-video-indexer-with-media-services-presets">jämförelsedokumentet</a>.
 sections:
 - items:
   - type: list
     style: cards
     className: cardsM
-    columns: 2
+    columns: 3
     items:
     - href: /azure/media-services/latest/
       html: <p>Lär dig mer om att koda, strömma på begäran, sända live och analysera dina videor med Media Services v3.</p>
       image:
         src: media/index/AMSIcons-media_servicesV3.svg
-      title: Azure Media Services v3 (förhandsversion)
+      title: Azure Media Services v3
     - href: /azure/media-services/previous/
       html: <p>Lär dig mer om att koda, strömma på begäran och sända videor live med Media Services v2.</p>
       image:
         src: media/index/AMSIcons-media_servicesV2.svg
-      title: Azure Media Services v2 (GA)
+      title: Azure Media Services v2 (äldre version)
+    - href: /azure/media-services/video-indexer/
+      html: <p>Lär dig att extrahera insikter från dina video- och ljudfiler med Video Indexer.</p>
+      image:
+        src: media/index/AMSIcons-media_analytics.svg
+      title: Video Indexer
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: 'Lär dig att koda och strömma med Media Services:'
-  - type: table
-    style: dataMatrix
-    columns:
+    text: 'Lär dig att koda och strömma med Media Services v3:'
+  - type: list
+    style: icon48
+    items:
     - image:
         src: media/index/AMSIcons-encoding.svg
-      title: Strömma filer
-    rows:
-    - title: Media Services v3
-      values:
-      - href: /azure/media-services/latest/stream-files-dotnet-quickstart
-    - title: Media Services v2
-      values:
-      - href: /azure/media-services/previous/media-services-portal-vod-get-started
+      text: Strömma filer
+      href: /azure/media-services/latest/stream-files-dotnet-quickstart
+  - type: paragraph
+    text: 'Lär dig att extrahera insikter från dina videor med Video Indexer:'
+  - type: list
+    style: icon48
+    items:
+    - image:
+        src: media/index/AMSIcons-media_analytics.svg
+      text: Extrahera insikter
+      href: ../cognitive-services/video-indexer/video-indexer-get-started.md?toc=/azure/media-services/video-indexer/toc.json&bc=/azure/media-services/video-indexer/breadcrumb/toc.json
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: 'Lär dig mer om att strömma filer och analysera dina videor med Media Services:'
-  - type: table
-    style: dataMatrix
-    columns:
+    text: 'Lär dig mer om att strömma filer på begäran, sända direkt och analysera dina videoklipp med Media Services v3:'
+  - type: list
+    style: icon48
+    items:
     - image:
         src: media/index/AMSIcons-encoding.svg
-      title: Koda och strömma
+      text: Ladda upp, koda och strömma videor
+      href: /azure/media-services/latest/stream-files-tutorial-with-api
     - image:
         src: media/index/AMSIcons-live.svg
-      title: Strömma live
+      text: Sända direkt
+      href: /azure/media-services/latest/stream-live-tutorial-with-api
     - image:
         src: media/index/AMSIcons-media_analytics.svg
-      title: Analysera videor
-    rows:
-    - title: Media Services v3
-      values:
-      - href: /azure/media-services/latest/stream-files-tutorial-with-api
-      - href: /azure/media-services/latest/stream-live-tutorial-with-api
-      - href: /azure/media-services/latest/analyze-videos-tutorial-with-api
-    - title: Media Services v2
-      values:
-      - href: /azure/media-services/previous/media-services-dotnet-get-started
-      - href: /azure/media-services/previous/media-services-portal-live-passthrough-get-started
-      - href: 
+      text: Analysera dina videor
+      href: /azure/media-services/latest/analyze-videos-tutorial-with-api
+  - type: paragraph
+    text: 'Lär dig att extrahera insikter från dina videor med Video Indexer-API:et:'
+  - type: list
+    style: icon48
+    items:
+    - image:
+        src: media/index/AMSIcons-media_analytics.svg
+      text: Extrahera insikter
+      href: ../cognitive-services/video-indexer/video-indexer-use-apis.md?toc=/azure/media-services/video-indexer/toc.json&bc=/azure/media-services/video-indexer/breadcrumb/toc.json
