--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -14,7 +14,7 @@ items:
   - name: Skapa en händelsehubb
     items:
     - name: Azure Portal
-      href: event-hubs-quickstart-portal.md
+      href: event-hubs-create.md
     - name: Azure CLI
       href: event-hubs-quickstart-cli.md
     - name: Azure PowerShell
@@ -65,11 +65,11 @@ items:
     maintainContext: true
   - name: Event Hubs för Apache Kafka
     items:
-    - name: Apache Kafka MirrorMaker med Event Hubs
+    - name: Spegla en asynkron Kafka-meddelandekö i en Apache Kafka-aktiverad händelsehubb
       href: event-hubs-kafka-mirror-maker-tutorial.md
-    - name: Apache Flink med Event Hubs
+    - name: Ansluta Apache Flink till en Apache Kafka-aktiverad händelsehubb
       href: event-hubs-kafka-flink-tutorial.md
-    - name: Akka Streams med Event Hubs
+    - name: Ansluta Akka Streams till en Apache Kafka-aktiverad händelsehubb
       href: event-hubs-kafka-akka-streams-tutorial.md
 - name: Exempel
   href: event-hubs-samples.md
@@ -100,45 +100,36 @@ items:
     maintainContext: true
 - name: Instruktionsguider
   items:
-  - name: Skapa en händelsehubb
-    href: event-hubs-create.md
-  - name: Använda IP-anslutningsfilter
-    href: event-hubs-ip-filtering.md
-  - name: Använda tjänstslutpunkter för virtuellt nätverk
-    href: event-hubs-service-endpoints.md
-  - name: Skala dataflödesenheter automatiskt
-    href: event-hubs-auto-inflate.md
+  - name: Skapa en händelsehubb med en Resource Manager-mall
+    href: event-hubs-resource-manager-namespace-event-hub.md
   - name: Event Hubs för Apache Kafka
     items:
     - name: Skapa Apache Kafka-aktiverade Event Hubs
       href: event-hubs-create-kafka-enabled.md
     - name: Bearbeta Apache Kafka för Event Hubs-händelser med Stream-analys
       href: event-hubs-kafka-stream-analytics.md
-  - name: Tillgängliga API:er
-    href: event-hubs-api-overview.md
-    items:
-    - name: .NET Standard
-      href: event-hubs-dotnet-standard-api-overview.md
-    - name: .NET Framework
-      href: event-hubs-dotnet-framework-api-overview.md
   - name: Samla in händelser
     items:
     - name: Använda Azure Portal för att aktivera Event Hubs Capture
       href: event-hubs-capture-enable-through-portal.md
     - name: Använda en Resource Manager-mall för att aktivera Event Hubs Capture
       href: event-hubs-resource-manager-namespace-event-hub-enable-capture.md
+    - name: Samla in Event Hubs-data med hjälp av Python
+      href: event-hubs-capture-python.md
   - name: Hantera
     items:
     - name: Övervaka Event Hubs med Azure-övervakning
       href: event-hubs-metrics-azure-monitor.md
     - name: Event Hubs-hanteringsbibliotek
       href: event-hubs-management-libraries.md
-    - name: Samla in Event Hubs-data med hjälp av Python
-      href: event-hubs-capture-python.md
-    - name: Strömma Azure Diagnostics-data med Event Hubs
-      href: event-hubs-streaming-azure-diags-data.md
-    - name: Skapa och distribuera en händelsehubb med en Resource Manager-mall
-      href: event-hubs-resource-manager-namespace-event-hub.md
+  - name: Använda IP-filter
+    href: event-hubs-ip-filtering.md
+  - name: Använda tjänstslutpunkter för virtuellt nätverk
+    href: event-hubs-service-endpoints.md
+  - name: Skala dataflödesenheter automatiskt
+    href: event-hubs-auto-inflate.md
+  - name: Strömma Azure Diagnostics-data med Event Hubs
+    href: event-hubs-streaming-azure-diags-data.md
 - name: Referens
   items:
   - name: Java
@@ -173,8 +164,6 @@ items:
     href: event-hubs-faq.md
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/?category=iot
-  - name: Utbildningsväg
-    href: https://azure.microsoft.com/documentation/learning-paths/event-hubs/
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/event-hubs/
   - name: Priskalkylator
@@ -185,9 +174,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-eventhub
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=event-hubs
-ms.openlocfilehash: 87a0088b54385a0a1af225db6f285dbf892253e7
-ms.sourcegitcommit: 6361a3d20ac1b902d22119b640909c3a002185b3
+ms.openlocfilehash: 6771409eb0a6fe11ff6a30cb829d3b166d93d8e2
+ms.sourcegitcommit: 707bb4016e365723bc4ce59f32f3713edd387b39
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "49362797"
+ms.lasthandoff: 10/19/2018
+ms.locfileid: "49426691"
