--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -61,12 +61,12 @@ items:
       href: how-to-transform-data.md
     - name: Skrivdata
       href: how-to-write-data.md
-  - name: Åtkomst till data
-    href: how-to-access-data.md
   - name: Inlärningsmodeller
     items:
     - name: Konfigurera miljöer för utbildning
       href: how-to-set-up-training-targets.md
+    - name: Få åtkomst till data under utbildning
+      href: how-to-access-data.md
     - name: Skapa uppskattningar
       href: how-to-train-ml-models.md
       items:
@@ -74,8 +74,6 @@ items:
         href: how-to-train-pytorch.md
       - name: TensorFlow
         href: how-to-train-tensorflow.md
-    - name: Skapa och distribuera ONNX-modeller
-      href: how-to-build-deploy-onnx.md
   - name: Justering av modeller
     items:
     - name: Justering av hyperparametrar
@@ -89,6 +87,10 @@ items:
       href: how-to-configure-auto-train.md
     - name: Använd fjärrberäkningsmål
       href: how-to-auto-train-remote.md
+  - name: ONNX-modeller
+    items:
+    - name: Skapa och distribuera ONNX-modeller
+      href: how-to-build-deploy-onnx.md
   - name: Distribuera modeller
     items:
     - name: Välj var du vill distribuera modeller
@@ -339,9 +341,9 @@ items:
       href: ../desktop-workbench/frequently-asked-questions.md
     - name: Äldre problem
       href: ../desktop-workbench/known-issues-and-troubleshooting-guide.md
-ms.openlocfilehash: 6e0224a614bdf457e210b00f186bd531b5053bf4
-ms.sourcegitcommit: 4eddd89f8f2406f9605d1a46796caf188c458f64
+ms.openlocfilehash: e408b78c66ddbd809d36c4aa8451b53031ba4d5a
+ms.sourcegitcommit: 707bb4016e365723bc4ce59f32f3713edd387b39
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/11/2018
-ms.locfileid: "49113689"
+ms.lasthandoff: 10/19/2018
+ms.locfileid: "49428274"
