commit translated contents

--- a/articles/aks/index.yml
+++ b/articles/aks/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ca2cba56bd84b1e1b5056e3308410ced3b620193
-ms.sourcegitcommit: cc4fdd6f0f12b44c244abc7f6bc4b181a2d05302
+ms.openlocfilehash: a22269560d485dcd98aaaabb88dbbba545d26a2d
+ms.sourcegitcommit: 62759a225d8fe1872b60ab0441d1c7ac809f9102
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/25/2018
-ms.locfileid: "47063633"
+ms.lasthandoff: 10/19/2018
+ms.locfileid: "49467919"
 documentType: LandingData
 title: Azure Kubernetes Service (AKS)
 metadata:
@@ -38,6 +38,27 @@ sections:
         src: https://docs.microsoft.com/media/common/i_portal.svg
       text: Azure Portal
       href: /azure/aks/kubernetes-walkthrough-portal
+  - type: paragraph
+    text: 'Lär dig hur du utvecklar och felsöker program med AKS:'
+  - type: list
+    style: icon48
+    items:
+    - image:
+        src: https://docs.microsoft.com/media/logos/logo_java.svg
+      text: Java
+      href: ../dev-spaces/quickstart-java.md
+    - image:
+        src: https://docs.microsoft.com/media/logos/logo_NETcore.svg
+      text: .NET och VS Code
+      href: ../dev-spaces/quickstart-netcore.md
+    - image:
+        src: https://docs.microsoft.com/media/logos/logo_visual-studio.svg
+      text: .NET och Visual Studio
+      href: ../dev-spaces/quickstart-netcore-visualstudio.md
+    - image:
+        src: https://docs.microsoft.com/media/logos/logo_nodejs.svg
+      text: Node.js
+      href: ../dev-spaces/quickstart-nodejs.md
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
@@ -52,7 +73,7 @@ sections:
     - html: <a href="/azure/aks/tutorial-kubernetes-scale">Skala ett program och Kubernetes-infrastruktur (Scale an application and Kubernetes infrastructure)</a>
     - html: <a href="/azure/aks/tutorial-kubernetes-app-update">Uppdatera ett program som körs i Kubernetes (Update an application running in Kubernetes)</a>
     - html: <a href="/azure/aks/tutorial-kubernetes-upgrade-cluster">Uppgradera AKS-kluster</a>
-- title: Utveckla din kompetens med Microsoft Learn
+- title: Utveckla dina färdigheter med Microsoft Learn
   items:
   - type: list
     style: cards
@@ -74,7 +95,7 @@ sections:
         src: /learn/achievements/build-and-store-container-images.svg
         href: /learn/modules/build-and-store-container-images/
   - type: paragraph
-    text: <a href="/learn/browse/?products=azure-container-registry%2Cazure-container-instances">Mer interaktiv utbildning...</a>
+    text: <a href="/learn/browse/?products=azure-container-registry%2Cazure-container-instances">Mer interaktiv inlärning...</a>
 - title: Referens
   items:
   - type: list
@@ -84,6 +105,6 @@ sections:
     - title: Kommandorad
       html: <p><a href="/cli/azure/aks">Azure CLI</a></p>
     - title: Språk
-      html: <p><a href="/dotnet/api/overview/azure/containerservice">.NET</a></p><p><a href="/python/api/overview/azure/containerservice">Python</a></p><p><a href="/java/api/overview/azure/containerservice">Java</a></p><p><a href="/javascript/api/overview/azure/container-service">Node.js</a></p>
+      html: <p><a href="/dotnet/api/overview/azure/containerservice">NET</a></p><p><a href="/python/api/overview/azure/containerservice">Python</a></p><p><a href="/java/api/overview/azure/containerservice">Java</a></p><p><a href="/javascript/api/overview/azure/container-service">Node.js</a></p>
     - title: REST
-      html: <p><a href="/rest/api/aks">REST API</a></p>
+      html: <p><a href="/rest/api/aks">REST-API</a></p>
