--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -89,7 +89,7 @@ items:
       href: how-to-auto-train-remote.md
   - name: ONNX-modeller
     items:
-    - name: Skapa och distribuera ONNX-modeller
+    - name: Skapa och distribuera
       href: how-to-build-deploy-onnx.md
   - name: Distribuera modeller
     items:
@@ -115,8 +115,6 @@ items:
       href: how-to-enable-app-insights.md
   - name: Hantera resurskvoter
     href: how-to-manage-quotas.md
-  - name: Exportera och ta bort data
-    href: how-to-export-delete-data.md
 - name: Referens
   items:
   - name: Maskininlärning SDK
@@ -133,18 +131,20 @@ items:
     href: https://azure.microsoft.com/pricing/details/machine-learning-services/
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-  - name: Exportera eller ta bort kontodata
-    href: ../desktop-workbench/export-delete-experimentation-model-management-data-dsr.md
   - name: Viktig information
     href: azure-machine-learning-release-notes.md
   - name: Kända problem
     href: resource-known-issues.md
   - name: Få support
     href: support-for-aml-services.md
+  - name: Exportera och ta bort data
+    href: how-to-export-delete-data.md
   - name: Inaktuella dokument
     items:
     - name: Så här migrerar du
       href: how-to-migrate.md
+    - name: Exportera eller ta bort kontodata (inaktuellt)
+      href: ../desktop-workbench/export-delete-experimentation-model-management-data-dsr.md
     - name: Snabbstart för workbench
       href: ../desktop-workbench/quickstart-installation.md
     - name: 'Självstudie 1: Förbereda data'
@@ -341,9 +341,9 @@ items:
       href: ../desktop-workbench/frequently-asked-questions.md
     - name: Äldre problem
       href: ../desktop-workbench/known-issues-and-troubleshooting-guide.md
-ms.openlocfilehash: e408b78c66ddbd809d36c4aa8451b53031ba4d5a
-ms.sourcegitcommit: 707bb4016e365723bc4ce59f32f3713edd387b39
+ms.openlocfilehash: 2e5e1d3c925a6b946e340820fc7d259251c0e9b7
+ms.sourcegitcommit: 668b486f3d07562b614de91451e50296be3c2e1f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 10/19/2018
-ms.locfileid: "49428274"
+ms.locfileid: "49457088"
