--- a/articles/traffic-manager/index.yml
+++ b/articles/traffic-manager/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: d7f1c1d523bc9c9d717accf7667c8bd7402bbc72
-ms.sourcegitcommit: f20e43e436bfeafd333da75754cd32d405903b07
+ms.openlocfilehash: ecfb8cff995d471a480226bc44164107b50eda84
+ms.sourcegitcommit: 668b486f3d07562b614de91451e50296be3c2e1f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "49388382"
+ms.lasthandoff: 10/19/2018
+ms.locfileid: "49458028"
 documentType: LandingData
 title: Traffic Manager
 metadata:
@@ -19,7 +19,7 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 04/26/2018
+  ms.date: 10/15/2018
   ms.author: kumud
 abstract:
   description: Lär dig hur du använder Azure Traffic Manager. Snabbstarter, självstudier och exempel med mera visar dig hur du hanterar inkommande trafik för optimal programprestanda och hur du distribuerar trafik till Azure eller externa tjänstslutpunkter.
@@ -43,10 +43,11 @@ sections:
     style: unordered
     items:
     - html: <a href="/azure/traffic-manager/traffic-manager-configure-geographic-routing-method">Dirigera trafik utifrån slutpunktens geografiska plats</a>
-    - html: <a href="/azure/traffic-manager/traffic-manager-configure-performance-routing-method">Dirigera trafik för låg latens</a>
+    - html: <a href="/azure/traffic-manager/tutorial-traffic-manager-improve-website-response">Dirigera trafik för låg latens</a>
     - html: <a href="/azure/traffic-manager/traffic-manager-configure-weighted-routing-method">Distribuera trafik till en uppsättning slutpunkter</a>
     - html: <a href="/azure/traffic-manager/traffic-manager-configure-priority-routing-method">Dirigera trafik till en slutpunkt för prioritet</a>
-    - html: <a href="/azure/traffic-manager/traffic-manager-configure-priority-routing-method">Dirigera trafik utifrån användarens undernät</a>
+    - html: <a href="/azure/traffic-manager/tutorial-traffic-manager-weighted-endpoint-routing">Styra trafiken med viktade slutpunkter</a>
+    - html: <a href="/azure/traffic-manager/tutorial-traffic-manager-subnet-routing">Dirigera trafik utifrån användarens undernät</a>
 - title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
