--- a/articles/traffic-manager/toc.yml
+++ b/articles/traffic-manager/toc.yml
@@ -19,6 +19,8 @@ items:
     href: traffic-manager-configure-weighted-routing-method.md
   - name: Dirigera trafik till en slutpunkt för prioritet
     href: traffic-manager-configure-priority-routing-method.md
+  - name: Styra trafiken med viktade slutpunkter
+    href: tutorial-traffic-manager-weighted-endpoint-routing.md
   - name: Dirigera trafik utifrån användarens undernät
     href: tutorial-traffic-manager-subnet-routing.md
 - name: Exempel
@@ -130,9 +132,9 @@ items:
     href: https://azure.microsoft.com/support/legal/sla/traffic-manager/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=traffic-manager
-ms.openlocfilehash: e83620f2a1d72483979b545c2805927916d7f788
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: 3ae9f33143ec29b028a7d4fffc5f97477baa3a4a
+ms.sourcegitcommit: 668b486f3d07562b614de91451e50296be3c2e1f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46954372"
+ms.lasthandoff: 10/19/2018
+ms.locfileid: "49457229"
