--- a/articles/azure-stack/partner/TOC.yml
+++ b/articles/azure-stack/partner/TOC.yml
@@ -8,45 +8,39 @@ items:
     href: azure-stack-vaas-overview.md
   - name: Viktig information
     href: azure-stack-vaas-release-notes.md
-    items:
-    - name: 2018-04-02-uppdatering
-      href: azure-stack-partner-update-1803.md
-    - name: 2018-01-30-uppdatering
-      href: azure-stack-partner-update-1802.md
-  - name: Kända problem
-    href: azure-stack-vaas-known-issues.md
   expanded: true
-- name: Snabbstart
-  items:
-  - name: Schemalägg din första testet
-    href: azure-stack-vaas-schedule-your-first-test.md
 - name: Självstudier
   items:
-  - name: Konfigurera ditt konto med Azure Stack-verifiering
-    href: azure-stack-vaas-set-up-account.md
+  - name: Konfigurera dina resurser
+    href: azure-stack-vaas-set-up-resources.md
   - name: Automatisera Azure Stack-verifiering med PowerShell
     href: azure-stack-vaas-automate-with-powershell.md
+- name: Hur du hjälper
+  items:
+  - name: Schemalägg din första test
+    href: azure-stack-vaas-schedule-test-pass.md
+  - name: Distribuera lokal agent
+    href: azure-stack-vaas-local-agent.md
   - name: Verifiera en ny Azure Stack-lösning
     href: azure-stack-vaas-validate-solution-new.md
+  - name: Skapa ett OEM-paket
+    href: azure-stack-vaas-create-oem-package.md
   - name: Verifiera OEM-paket
     href: azure-stack-vaas-validate-oem-package.md
   - name: Verifiera programuppdateringar från Microsoft
     href: azure-stack-vaas-validate-microsoft-updates.md
-  - name: Virtuella testdatorer
-    href: azure-stack-vaas-test-vm.md
 - name: Begrepp
   items:
-  - name: Övervaka ett test
+  - name: Viktiga begrepp
+    href: azure-stack-vaas-key-concepts.md
+  - name: Bästa praxis
+    href: azure-stack-vaas-best-practice.md
+  - name: Övervaka och hantera tester i VaaS-portalen
     href: azure-stack-vaas-monitor-test.md
-  - name: Konfigurationsfilen för verifiering
+  - name: Arbetsflödets gemensamma parametrar
     href: azure-stack-vaas-parameters.md
-  - name: Testa skicka parametrar
-    href: azure-stack-vaas-parameters-test.md
   - name: Felsöka verifiering som en tjänst
     href: azure-stack-vaas-troubleshoot.md
-- name: Referens
-  items:
-  - name: (Objekt kommer från JH)
 - name: Relaterat
   items:
   - name: Azure Stack-dokumentation
@@ -68,9 +62,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-stack
   - name: Utbildning och certifiering
     href: https://docs.microsoft.com/azure/azure-stack/azure-stack-train-and-cert
-ms.openlocfilehash: 15f87b24299726c2390c736a9801306e9dcf945b
-ms.sourcegitcommit: 3f8f973f095f6f878aa3e2383db0d296365a4b18
+ms.openlocfilehash: 3b15fbab72d094a18a1c794ca556a719efd376dd
+ms.sourcegitcommit: ccdea744097d1ad196b605ffae2d09141d9c0bd9
 ms.translationtype: MT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/20/2018
-ms.locfileid: "40235435"
+ms.lasthandoff: 10/23/2018
+ms.locfileid: "49649694"
