--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -104,6 +104,8 @@ items:
       href: luis-concept-utterance.md
     - name: Roller
       href: luis-concept-roles.md
+    - name: Fördefinierade modeller
+      href: luis-concept-prebuilt-model.md
   - name: Förbättra apprestanda
     items:
     - name: Förutsägelseresultat
@@ -152,6 +154,14 @@ items:
       href: luis-how-to-add-example-utterances.md
     - name: Lägg till entiteter
       href: luis-how-to-add-entities.md
+    - name: Använd fördefinierade modeller
+      items:
+      - name: Använd domäner
+        href: luis-prebuilt-domains.md
+      - name: Användningsavsikter
+        href: luis-prebuilt-intent.md
+      - name: Använd enheter
+        href: luis-prebuilt-entities.md
     - name: Med REST API:er
       items:
       - name: Skapa en app programmässigt med Node.js
@@ -196,12 +206,6 @@ items:
       href: luis-how-to-batch-test.md
   - name: Publicera
     href: luis-how-to-publish-app.md
-  - name: Använd fördefinierade modeller
-    items:
-    - name: Använd enheter
-      href: luis-prebuilt-entities.md
-    - name: Använd domäner
-      href: luis-how-to-use-prebuilt-domains.md
   - name: Hantera app
     items:
     - name: Använd instrumentpanelen
@@ -364,9 +368,9 @@ items:
     href: https://blog.botframework.com/category/luis/
   - name: Kunskapsbas
     href: https://cognitive.uservoice.com/knowledgebase/topics/127872-luis-language-understanding-intelligent-service
-ms.openlocfilehash: fda370f0abc292c1bcd0549e8761e342f3c6b815
-ms.sourcegitcommit: 668b486f3d07562b614de91451e50296be3c2e1f
+ms.openlocfilehash: f946ab4262d078b8f645800cee9a8e98ee0e104c
+ms.sourcegitcommit: ccdea744097d1ad196b605ffae2d09141d9c0bd9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/19/2018
-ms.locfileid: "49458215"
+ms.lasthandoff: 10/23/2018
+ms.locfileid: "49647059"
