--- a/articles/cognitive-services/Translator/toc.yml
+++ b/articles/cognitive-services/Translator/toc.yml
@@ -7,103 +7,101 @@ items:
     href: translator-info-overview.md
 - name: Snabbstarter
   items:
-  - name: C#
+  - name: Översätt text
     items:
-    - name: Översätt text
+    - name: C#, REST
       href: quickstart-csharp-translate.md
-    - name: Konvertera textskript
-      href: quickstart-csharp-transliterate.md
-    - name: Identifiera språket i texten
-      href: quickstart-csharp-detect.md
-    - name: Hämta alternativa översättningar
-      href: quickstart-csharp-dictionary.md
-    - name: Hämta språk som stöds
-      href: quickstart-csharp-languages.md
-    - name: Hämta meningslängden i text
-      href: quickstart-csharp-sentences.md
-  - name: Go
-    items:
-    - name: Översätt text
+    - name: Go, REST
       href: quickstart-go-translate.md
-    - name: Konvertera textskript
-      href: quickstart-go-transliterate.md
-    - name: Identifiera språket i texten
-      href: quickstart-go-detect.md
-    - name: Hämta alternativa översättningar
-      href: quickstart-go-dictionary.md
-    - name: Hämta språk som stöds
-      href: quickstart-go-languages.md
-    - name: Hämta meningslängden i text
-      href: quickstart-go-sentences.md
-  - name: Java
-    items:
-    - name: Översätt text
+    - name: Java, REST
       href: quickstart-java-translate.md
-    - name: Konvertera textskript
-      href: quickstart-java-transliterate.md
-    - name: Identifiera språket i texten
-      href: quickstart-java-detect.md
-    - name: Hämta alternativa översättningar
-      href: quickstart-java-dictionary.md
-    - name: Hämta språk som stöds
-      href: quickstart-java-languages.md
-    - name: Hämta meningslängden i text
-      href: quickstart-java-sentences.md
-  - name: Node.js
-    items:
-    - name: Översätt text
+    - name: Node.js, REST
       href: quickstart-nodejs-translate.md
-    - name: Konvertera textskript
-      href: quickstart-nodejs-transliterate.md
-    - name: Identifiera språket i texten
-      href: quickstart-nodejs-detect.md
-    - name: Hämta alternativa översättningar
-      href: quickstart-nodejs-dictionary.md
-    - name: Hämta språk som stöds
-      href: quickstart-nodejs-languages.md
-    - name: Hämta meningslängden i text
-      href: quickstart-nodejs-sentences.md
-  - name: PHP
-    items:
-    - name: Översätt text
+    - name: PHP, REST
       href: quickstart-php-translate.md
-    - name: Konvertera textskript
-      href: quickstart-php-transliterate.md
-    - name: Identifiera språket i texten
-      href: quickstart-php-detect.md
-    - name: Hämta alternativa översättningar
-      href: quickstart-php-dictionary.md
-    - name: Hämta språk som stöds
-      href: quickstart-php-languages.md
-    - name: Hämta meningslängden i text
-      href: quickstart-php-sentences.md
-  - name: Python
-    items:
-    - name: Översätt text
+    - name: Python, REST
       href: quickstart-python-translate.md
-    - name: Konvertera textskript
-      href: quickstart-python-transliterate.md
-    - name: Identifiera språket i texten
-      href: quickstart-python-detect.md
-    - name: Hämta alternativa översättningar
-      href: quickstart-python-dictionary.md
-    - name: Hämta språk som stöds
-      href: quickstart-python-languages.md
-    - name: Hämta meningslängden i text
-      href: quickstart-python-sentences.md
-  - name: Ruby
-    items:
-    - name: Översätt text
+    - name: Ruby, REST
       href: quickstart-ruby-translate.md
-    - name: Konvertera textskript
+  - name: Transkribera text
+    items:
+    - name: C#, REST
+      href: quickstart-csharp-transliterate.md
+    - name: Go, REST
+      href: quickstart-go-transliterate.md
+    - name: Java, REST
+      href: quickstart-java-transliterate.md
+    - name: Node.js, REST
+      href: quickstart-nodejs-transliterate.md
+    - name: PHP, REST
+      href: quickstart-php-transliterate.md
+    - name: Python, REST
+      href: quickstart-python-transliterate.md
+    - name: Ruby, REST
       href: quickstart-ruby-transliterate.md
-    - name: Identifiera språket i texten
+  - name: Identifiera språk
+    items:
+    - name: C#, REST
+      href: quickstart-csharp-detect.md
+    - name: Go, REST
+      href: quickstart-go-detect.md
+    - name: Java, REST
+      href: quickstart-java-detect.md
+    - name: Node.js, REST
+      href: quickstart-nodejs-detect.md
+    - name: PHP, REST
+      href: quickstart-php-detect.md
+    - name: Python, REST
+      href: quickstart-python-detect.md
+    - name: Ruby, REST
       href: quickstart-ruby-detect.md
-    - name: Hämta alternativa översättningar
+  - name: Hämta alternativa översättningar
+    items:
+    - name: C#, REST
+      href: quickstart-csharp-dictionary.md
+    - name: Go, REST
+      href: quickstart-go-dictionary.md
+    - name: Java, REST
+      href: quickstart-java-dictionary.md
+    - name: Node.js, REST
+      href: quickstart-nodejs-dictionary.md
+    - name: PHP, REST
+      href: quickstart-php-dictionary.md
+    - name: Python, REST
+      href: quickstart-python-dictionary.md
+    - name: Ruby, REST
       href: quickstart-ruby-dictionary.md
-    - name: Hämta språk som stöds
+  - name: Hämta språk som stöds
+    items:
+    - name: C#, REST
+      href: quickstart-csharp-languages.md
+    - name: Go, REST
+      href: quickstart-go-languages.md
+    - name: Java, REST
+      href: quickstart-java-languages.md
+    - name: Node.js, REST
+      href: quickstart-nodejs-languages.md
+    - name: PHP, REST
+      href: quickstart-php-languages.md
+    - name: Python, REST
+      href: quickstart-python-languages.md
+    - name: Ruby, REST
       href: quickstart-ruby-languages.md
-    - name: Hämta meningslängden i text
+  - name: Fastställa meningslängd
+    items:
+    - name: C#, REST
+      href: quickstart-csharp-sentences.md
+    - name: Go, REST
+      href: quickstart-go-sentences.md
+    - name: Java, REST
+      href: quickstart-java-sentences.md
+    - name: Node.js, REST
+      href: quickstart-nodejs-sentences.md
+    - name: PHP, REST
+      href: quickstart-php-sentences.md
+    - name: Python, REST
+      href: quickstart-python-sentences.md
+    - name: Ruby, REST
       href: quickstart-ruby-sentences.md
   expanded: true
 - name: Självstudier
@@ -174,9 +172,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/microsoft-translator
   - name: UserVoice
     href: https://cognitive.uservoice.com/forums/558796-translator
-ms.openlocfilehash: cd559b41832e83b4251531bc6af6a7fe4f7d80ea
-ms.sourcegitcommit: 07a09da0a6cda6bec823259561c601335041e2b9
+ms.openlocfilehash: acc5019177bf75a0bb34eb739cc8e2400552832e
+ms.sourcegitcommit: 9e179a577533ab3b2c0c7a4899ae13a7a0d5252b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/18/2018
-ms.locfileid: "49406491"
+ms.lasthandoff: 10/23/2018
+ms.locfileid: "49945271"
