--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -1,89 +1,95 @@
 items:
 - name: Översikt
   items:
-  - name: Introduktion
+  - name: Vad är Azure Files?
     href: storage-files-introduction.md
   - name: Välja blobar, filer eller datadiskar
     href: ../common/storage-decide-blobs-files-disks.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: storage-files-faq.md
-- name: Kom igång
+- name: Snabbstarter
   items:
-  - name: skapar ett lagringskonto
-    href: ../common/storage-create-storage-account.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-  - name: Skapa en filresurs
-    href: storage-how-to-create-file-share.md
-  - name: Ansluta i Windows
-    href: storage-how-to-use-files-windows.md
-  - name: Ansluta i Linux
-    href: storage-how-to-use-files-linux.md
-  - name: Montera på macOS
-    href: storage-how-to-use-files-mac.md
-  - name: Hantera med Azure Portal
+  - name: Skapa filresurser – portalen
     href: storage-how-to-use-files-portal.md
-  - name: Hantera med PowerShell
+  - name: Skapa filresurser – PowerShell
     href: storage-how-to-use-files-powershell.md
-  - name: Hantera med Azure CLI
+  - name: Skapa filresurser – CLI
     href: storage-how-to-use-files-cli.md
-  - name: Hantera med Storage Explorer
+  - name: Skapa filresurser – Storage Explorer
     href: storage-how-to-use-files-storage-explorer.md
-- name: Gör så här för att
+  expanded: true
+- name: Självstudier
+  items:
+  - name: Utöka Windows-filservrar med Azure File Sync
+    href: storage-sync-files-extend-servers.md
+- name: Begrepp
   items:
   - name: Planera
     items:
-    - name: Planera för distribution av Azure Files
+    - name: Azure Files
       href: storage-files-planning.md
-    - name: Planera för distribution av Azure File Sync
+    - name: Azure File Sync
       href: storage-sync-files-planning.md
-    - name: Förstå lagringsnivåer för moln
-      href: storage-sync-cloud-tiering.md
-    - name: Förstå lagringskonton
-      href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-      items:
-      - name: Hantera ett lagringskonto
-        href: ../common/storage-account-manage.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-      - name: Uppgradera ett lagringskonto
-        href: ../common/storage-account-upgrade.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: Förstå ögonblicksbilder av filresurser
-      href: storage-snapshots-files.md
-    - name: Dataredundans
-      items:
-      - name: Översikt över redundans
-        href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-      - name: Lokalt redundant lagring
-        href: ../common/storage-redundancy-lrs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-      - name: Zonredundant lagring
-        href: ../common/storage-redundancy-zrs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-      - name: Geografiskt redundant lagring
-        href: ../common/storage-redundancy-grs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: Mål för skalbarhet och prestanda
-      href: storage-files-scale-targets.md
-    - name: Vägledning om haveriberedskap
-      href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: Viktig information om Azure File Sync
-      href: storage-files-release-notes.md
+  - name: Förstå lagringskonton
+    href: ../common/storage-account-options.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+  - name: Dataredundans
+    items:
+    - name: Översikt över redundans
+      href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+    - name: Lokalt redundant lagring
+      href: ../common/storage-redundancy-lrs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+    - name: Zonredundant lagring
+      href: ../common/storage-redundancy-zrs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+    - name: Geografiskt redundant lagring
+      href: ../common/storage-redundancy-grs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+  - name: Mål för skalbarhet och prestanda
+    href: storage-files-scale-targets.md
+  - name: Vägledning om haveriberedskap
+    href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+  - name: VANLIGA FRÅGOR OCH SVAR
+    href: storage-files-faq.md
+- name: Gör så här för att
+  items:
   - name: Distribuera
     items:
-    - name: Så här distribuerar du Azure Files
+    - name: Distribuera Azure Files
       href: storage-files-deployment-guide.md
-    - name: Så här distribuerar du Azure File Sync
+    - name: Distribuera Azure File Sync
       href: storage-sync-files-deployment-guide.md
-    - name: Inställningar för Azure File Sync-proxy och brandväggar
+    - name: Inställningar för File Sync-proxy och brandväggar
       href: storage-sync-files-firewall-and-proxy.md
+    - name: Viktig information om Azure File Sync
+      href: storage-files-release-notes.md
   - name: Hantera
     items:
+    - name: Skapa en filresurs
+      href: storage-how-to-create-file-share.md
+    - name: Använda Azure Files med Windows
+      href: storage-how-to-use-files-windows.md
+    - name: Använda Azure Files med Linux
+      href: storage-how-to-use-files-linux.md
+    - name: Använda Azure Files med macOS
+      href: storage-how-to-use-files-mac.md
     - name: Registrera en server med Azure File Sync
       href: storage-sync-files-server-registration.md
+    - name: Förstå ögonblicksbilder av filresurser
+      href: storage-snapshots-files.md
     - name: Lägga till en serverslutpunkt för Azure File Sync
       href: storage-sync-files-server-endpoint.md
     - name: PowerShell i molnet för Kina, myndigheter och Tyskland
       href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: Azure Automation
-      href: ../common/storage-manage-with-automation.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+  - name: Överföra data
+    items:
+    - name: Flytta data till och från lagring
+      href: ../common/storage-moving-data.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+    - name: AzCopy i Windows
+      href: ../common/storage-use-azcopy.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+    - name: AzCopy i Linux
+      href: ../common/storage-use-azcopy-linux.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
   - name: Utveckla
     items:
     - name: Hantera samtidighet
       href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+    - name: Konfigurera anslutningssträngar
+      href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: .NET
       href: storage-dotnet-how-to-use-files.md
     - name: Java
@@ -92,15 +98,7 @@ items:
       href: storage-c-plus-plus-how-to-use-files.md
     - name: Python
       href: storage-python-how-to-use-file-storage.md
-    - name: Exempel
-      items:
-      - name: .NET
-        href: ../common/storage-samples-dotnet.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-      - name: Java
-        href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: Konfigurera anslutningssträngar
-      href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-  - name: Säkerhet och åtkomstkontroll
+  - name: Skydda
     items:
     - name: Säkerhetsguide
       href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
@@ -110,12 +108,6 @@ items:
       href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Kräv säker överföring
       href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: Azure AD-autentisering via SMB
-      items:
-      - name: Översikt över Azure AD-autentisering via SMB
-        href: storage-files-active-directory-overview.md
-      - name: Aktivera Azure AD-autentisering via SMB
-        href: storage-files-active-directory-enable.md
     - name: Autentisering med delad nyckel
       href: /rest/api/storageservices/Authorization-for-the-Azure-Storage-Services
     - name: Signaturer för delad åtkomst (SAS)
@@ -126,38 +118,24 @@ items:
       href: ../common/storage-compliance-offerings.md
   - name: Övervaka och felsök
     items:
-    - name: Felsöka Azure Files-anslutningar – Windows
+    - name: Felsöka Azure Files på Windows
       href: storage-troubleshoot-windows-file-connection-problems.md
-    - name: Felsöka Azure Files-anslutningar – Linux
+    - name: Felsöka Azure Files på Linux
       href: storage-troubleshoot-linux-file-connection-problems.md
     - name: Felsök Azure File Sync
       href: storage-sync-files-troubleshoot.md
-    - name: Självstudie om felsökning
-      href: ../common/storage-e2e-troubleshooting.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Övervaka, diagnostisera och felsöka
       href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Mått och loggning
       items:
       - name: Mått i Azure Monitor
-        href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Migrera till nya mått
-        href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Lagringsanalys
-        href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Aktivera och visa mått (klassisk)
-        href: ../common/storage-enable-and-view-metrics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-  - name: Överföra data
-    items:
-    - name: Flytta data till och från lagring
-      href: ../common/storage-moving-data.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: AzCopy (v10)
-      href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: AzCopy i Windows (v8)
-      href: ../common/storage-use-azcopy.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: AzCopy i Linux (v8)
-      href: ../common/storage-use-azcopy-linux.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-  - name: Exempel
-    href: https://azure.microsoft.com/documentation/samples/?service=storage&term=file
+        href: ../common/storage-enable-and-view-metrics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
 - name: Referens
   items:
   - name: PowerShell
@@ -200,6 +178,8 @@ items:
       href: /rest/api/storagerp
     - name: Import/Export
       href: /rest/api/storageimportexport
+  - name: Exempel
+    href: https://azure.microsoft.com/documentation/samples/?service=storage&term=file
 - name: Resurser
   items:
   - name: Azure-översikt
@@ -246,23 +226,15 @@ items:
         href: https://github.com/Azure/azure-storage-net-data-movement
       - name: Resursprovider
         href: https://github.com/Azure/azure-sdk-for-net
-    - name: Node.js
-      href: http://azure.github.io/azure-storage-node/
     - name: Java
       href: https://github.com/Azure/azure-storage-java
     - name: C++
       href: https://github.com/Azure/azure-storage-cpp
-    - name: PHP
-      href: https://github.com/Azure/azure-storage-php
     - name: Python
       href: https://github.com/Azure/azure-storage-python
-    - name: Ruby
-      href: https://github.com/Azure/azure-storage-ruby
-    - name: iOS
-      href: https://github.com/Azure/azure-storage-ios
-ms.openlocfilehash: 4aff84477434cfa96ae422e96d389804c27a5cb6
-ms.sourcegitcommit: 707bb4016e365723bc4ce59f32f3713edd387b39
+ms.openlocfilehash: a649fd094459493c982e7c3f3ef0da2ca14116bd
+ms.sourcegitcommit: 5c00e98c0d825f7005cb0f07d62052aff0bc0ca8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/19/2018
-ms.locfileid: "49426986"
+ms.lasthandoff: 10/24/2018
+ms.locfileid: "49958789"
