--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -73,8 +73,9 @@ items:
   - name: Resursmodell
     href: sql-api-resources.md
   - name: Global distribution
-    href: distribute-data-globally.md
     items:
+    - name: Introduktion
+      href: distribute-data-globally.md
     - name: Viktiga fördelar
       href: distribute-data-globally-benefits.md
     - name: Aktivera global distribution
@@ -86,8 +87,9 @@ items:
     - name: Konfliktlösning
       href: multi-master-conflict-resolution.md
   - name: Dataflöde
-    href: request-units.md
     items:
+    - name: Introduktion
+      href: request-units.md
     - name: Beräkna och ange dataflöde
       href: set-throughput.md
   - name: Partitionering och datadistribution
@@ -103,8 +105,9 @@ items:
   - name: Unika nycklar
     href: unique-keys.md
   - name: Säkerhet
-    href: database-security.md
     items:
+    - name: Introduktion
+      href: database-security.md
     - name: Datakryptering
       href: database-encryption-at-rest.md
     - name: Säker åtkomst till data
@@ -428,6 +431,12 @@ items:
         href: performance-testing.md
     - name: Kostnadseffektiva läsningar och skrivningar
       href: key-value-store-cost.md
+  - name: Visualisera Cosmos DB-data
+    items:
+    - name: Använda Power BI
+      href: powerbi-visualize.md
+    - name: Använda Qlik Sense
+      href: visualize-qlik-sense.md
   - name: Integrera med andra Azure-tjänster
     items:
     - name: Näthandelslösning för ändringsflöde
@@ -458,8 +467,6 @@ items:
       href: spark-connector.md
     - name: Spark och Kafka
       href: https://docs.microsoft.com/azure/hdinsight/apache-kafka-spark-structured-streaming-cosmosdb?toc=/azure/cosmos-db/toc.json
-    - name: Power BI-anslutningsapp
-      href: powerbi-visualize.md
     - name: ODBC-drivrutin
       href: odbc-driver.md
   - name: Massexecutor-bibliotek
@@ -494,9 +501,9 @@ items:
       href: use-cases.md
     - name: Appar för sociala medier
       href: social-media-apps.md
-ms.openlocfilehash: 79c5c4d9d39a3735098b2d81a5d04259e3bc7acb
-ms.sourcegitcommit: 62759a225d8fe1872b60ab0441d1c7ac809f9102
+ms.openlocfilehash: dfa5b34127abf569a359814b6064ec981f57796d
+ms.sourcegitcommit: c2c279cb2cbc0bc268b38fbd900f1bac2fd0e88f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/19/2018
-ms.locfileid: "49471177"
+ms.lasthandoff: 10/24/2018
+ms.locfileid: "49985836"
